<?xml version="1.0"?>
<package format="2">
  <name>iai_image_logging_msgs</name>
  <version>0.0.0</version>
  <description>The iai_image_logging_msgs package</description>

  <maintainer email="ta_wu@tzi.de">Tammo Wuebbena</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
